--- a/style-1200.css
+++ b/style-1200.css
@@ -2,15 +2,21 @@
 @media (max-width: 1200px)
  {
     .app-container {
-        grid-template-columns: 220px 1fr;
+        .app-container {
+        grid-template-columns: auto 1fr;
+        grid-template-rows: 1fr auto;
+        grid-template-areas: 
+            "sidebar main"
+            "footer footer";
+        height: fit-content;
+    }
     }
     
-    .info-panel {
-        display: none;
-    }
+ 
     
     .maze-area {
         padding: 25px;
+        height: fit-content; /* ключевое свойство */
     }
     
     .sidebar-logo {
@@ -59,6 +65,9 @@
     }
     
     /* Адаптация home-grid */
+    home-title {
+        font-size: 22px !important;
+    }
     .home-grid {
         gap: 15px;
         max-width: 700px;
