--- a/style-800.css
+++ b/style-800.css
@@ -6,6 +6,10 @@
         overflow-x: hidden !important;
         margin: 0 !important;
         padding: 0 !important;
+        max-height: calc(100dvh - 60px);
+        overflow: hidden;
+        padding-bottom: env(safe-area-inset-bottom);
+    }
     }
   .app-container {
         grid-template-columns: 140px 1fr !important; /* ← РАБОЧЕЕ РЕШЕНИЕ */
