--- a/style-480.css
+++ b/style-480.css
@@ -1,11 +1,12 @@
     @media (max-width: 480px) {
     .app-container {
-        grid-template-columns: 110px 1fr !important;;
+        grid-template-columns: 120px 1fr !important;;
         grid-template-rows: 1fr auto;
         grid-template-areas: 
             "sidebar main"
             "footer footer";
         height: fit-content;
+        max-height: calc(100dvh - 60px);
     }
     
     /* Компактное вертикальное меню БЕЗ иконок */
@@ -14,9 +15,9 @@
         padding: 7px 0;
         background: #2c1810;
         display: flex;
-        width: 110px !important;
-        min-width: 110px !important;
-        max-width: 110px !important;
+        width: 120px !important;
+        min-width: 120px !important;
+        max-width: 120px !important;
         height: 100% !important;
         flex-direction: column;
         align-items: flex-start;
