--- a/style-mobile.css
+++ b/style-mobile.css
@@ -23,5 +23,12 @@
     .selection-card {
         margin-bottom: 12px;
     }
-
+.shops-grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, minmax(140px, auto)); /* ← еще меньше */
+        gap: 8px;
+        max-width: 400px;
+        margin: 0 auto 20px;
+        padding: 0 10px;
+    }
 }
