Set width to 100% in style-512.css

--- a/style-512.css
+++ b/style-512.css
@@ -90,6 +90,7 @@
         max-width: 100%;
         display: flex;
         flex-direction: column;
+        width: 100%;
     }
     
     /* Остальные стили остаются без изменений */
