--- a/style-512.css
+++ b/style-512.css
@@ -1,7 +1,7 @@
     @media (max-width: 512px) {
     .app-container {
-        grid-template-columns: 120px 1fr !important;;
-        grid-template-rows: auto 1fr;
+        grid-template-columns: 118px 1fr !important;;
+        grid-template-rows: 1fr auto;
         grid-template-areas: 
             "sidebar main"
             "footer footer";
@@ -15,9 +15,9 @@
         padding: 7px 0;
         background: #2c1810;
         display: flex;
-        width: 120px !important;
-        min-width: 120px !important;
-        max-width: 120px !important;
+        width: 118px !important;
+        min-width: 118px !important;
+        max-width: 118px !important;
         height: 100% !important;
         flex-direction: column;
         align-items: flex-start;
@@ -90,7 +90,6 @@
         max-width: 100%;
         display: flex;
         flex-direction: column;
-        width: 100%;
     }
     
     /* Остальные стили остаются без изменений */
