--- a/style-512.css
+++ b/style-512.css
@@ -1,13 +1,14 @@
-    @media (max-width: 512px) {
+    @media (max-width: 512px) 
+    {
     .app-container {
-        grid-template-columns: 118px 1fr !important;;
+        grid-template-columns: 120px 1fr !important;;
         grid-template-rows: 1fr auto;
         grid-template-areas: 
             "sidebar main"
             "footer footer";
-        min-height: 690px;
-        max-height: 790px;
-    }
+        min-height: 590px;
+        max-height: 690px;
+        }
     
     /* Компактное вертикальное меню БЕЗ иконок */
     .sidebar-logo {
@@ -16,9 +17,9 @@
         
         background: #2c1810;
         display: flex;
-        width: 118px !important;
-        min-width: 118px !important;
-        max-width: 118px !important;
+        width: 120px !important;
+        min-width: 120px !important;
+        max-width: 120px !important;
         height: 100% !important;
         flex-direction: column;
         align-items: flex-start;
@@ -30,10 +31,7 @@
         justify-content: flex-start;
     }
         
-    .logo-container {
-        display: none;
-    }
-        
+   
     .steps-container {
         flex-direction: column;
         gap: 4px; /* Уменьшаем отступ между пунктами */
@@ -47,7 +45,7 @@
         width: 100%;
         text-align: left;
         justify-content: flex-start;
-        align-items: left;
+        align-items: start; 
         display: flex;
         flex-direction: row;
         min-height: 36px; /* Фиксированная минимальная высота */
@@ -86,11 +84,12 @@
     
     .maze-area {
         grid-area: main;
-        padding: 5px;
+        padding: 1px;
         overflow-y: auto;
         max-width: 100%;
         display: flex;
         flex-direction: column;
+        align-items: start; 
     }
     
     /* Остальные стили остаются без изменений */
@@ -108,6 +107,7 @@
         max-width: 100%;
         height: auto; /* Автоматическая высота по содержимому */
         margin-bottom: 10px;
+        align-items: start; 
     }
     
     /* Центральный контент */
@@ -215,7 +215,7 @@
         grid-area: footer;
         padding: 10px;
         gap: 10px;
-        flex-wrap: wrap
+        flex-wrap: wrap;
         margin-bottom: 12px;;
     }
     
@@ -393,6 +393,14 @@
         font-size: 14px;
     }
     
+      .test-drive-container {
+        max-width: 550px; /* ← согласовать с .shops-grid */
+           
+        margin: 0px;
+        padding: 00px;
+        display: flex;
+    }
+    }
     /* Адаптация заголовка тест-драйва */
     .test-drive-container h3 {
         font-size: 16px;
@@ -423,22 +431,3 @@
         padding: 10px;
    
     }
-    
-    
-    .shop-card-header h4 {
-        font-size: 12px !important;
-    }
-    
-    .shop-card-content p {
-        font-size: 10px !important;
-        line-height: 1.4;
-        margin-bottom: 6px;
-    }
-    
-    .shop-address-grid i,
-    .shop-metro-grid i,
-    .shop-hours-grid i,
-    .shop-phone-grid i {
-        font-size: 12px !important;
-    }
-}
