--- a/style-800.css
+++ b/style-800.css
@@ -1,4 +1,5 @@
-@media (max-width: 800px) {
+@media (max-width: 800px) 
+{
        html, body {
         width: 100vw !important;
         max-width: 100vw !important;
@@ -10,7 +11,7 @@
         overflow: hidden;
         padding-bottom: env(safe-area-inset-bottom);
     }
-    }
+    
   .app-container {
         grid-template-columns: 140px 1fr !important; /* ← РАБОЧЕЕ РЕШЕНИЕ */
         grid-template-rows: 1fr auto;
@@ -19,15 +20,13 @@
             "footer footer";
         height: 100vh;
         width: 100vw;
-        min-width: 100vw
+        min-width: 100vw;
         max-width: 100vw;
         min-height: 100vh;
         overflow-x: hidden;
         margin: 0 !important;
         padding: 0;
-        /* ДОБАВИТЬ ЭТО: */
-        justify-items: stretch; /* ← растягиваем элементы по сетке */
-    }
+        }
     
     /* ЛЕВОЕ МЕНЮ - ВЗЯТО ИЗ СТАРОГО ФАЙЛА */
     .sidebar-logo {
@@ -258,7 +257,7 @@
     .shops-grid {
         grid-template-columns: repeat(2, 1fr);
         gap: 10px;
-        max-width: 500px;
+        max-width: 520px;
         margin: 0 auto 20px;
         align-content: start; 
         justify-content: start; 
