--- a/style-512.css
+++ b/style-512.css
@@ -108,10 +108,14 @@
         height: auto; /* Автоматическая высота по содержимому */
         margin-bottom: 10px;
         align-items: start; 
+        display: flex;
+            flex: 1
     }
     
         .shop-card-grid {
-            padding: 10px;
+            padding: 0px;
+            display: flex;
+            flex: 1
         }
 
         .shop-card-grid .shop-card-header h4 {
@@ -133,7 +137,11 @@
         .shop-card-grid .shop-card-content p {
             font-size: 11px !important; /* Уменьшаем все остальное */
             line-height: 1.3;
-            margin-bottom: 5px;
+            margin-bottom: 7px;
+            display: flex;
+           flex: 1;
+            padding: 4px;
+            
         }
 
         .shop-card-grid i {
