--- a/style-mobile.css
+++ b/style-mobile.css
@@ -13,6 +13,8 @@
         max-height: 95%;
         overflow: hidden;
         padding-bottom: env(safe-area-inset-bottom);
+        min-height: 590px;
+        max-height: 690px;
     }
 
     .maze-area {
@@ -23,12 +25,40 @@
     .selection-card {
         margin-bottom: 12px;
     }
-.shops-grid {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, minmax(140px, auto)); /* ← еще меньше */
-        gap: 8px;
-        max-width: 400px;
-        margin: 0 auto 20px;
-        padding: 0 10px;
-    }
+.shop-card-grid {
+            padding: 0px;
+            display: flex;
+            flex: 1
+        }
+
+        .shop-card-grid .shop-card-header h4 {
+            font-size: 12px !important; /* Уменьшаем заголовок */
+            font-weight: 600;
+            margin-bottom: 8px;
+        }
+
+        .shop-card-header {
+            border-bottom: none !important; /* Убираем линию */
+            padding-bottom: 0 !important; /* Убираем отступ снизу */
+            margin-bottom: 8px !important; /* Оставляем небольшой отступ */
+        }
+
+        .shop-card-header h4 {
+            margin-bottom: 0 !important; /* Убираем отступ снизу у заголовка */
+        }
+
+        .shop-card-grid .shop-card-content p {
+            font-size: 11px !important; /* Уменьшаем все остальное */
+            line-height: 1.3;
+            margin-bottom: 7px;
+            display: flex;
+           flex: 1;
+            padding: 4px;
+            
+        }
+
+        .shop-card-grid i {
+            font-size: 12px !important; /* Уменьшаем иконки */
+            margin-right: 6px;
+        }
 }
