--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 /* -----------------------------------------------------------------------
    1. БАЗОВЫЙ ПРОСТРАНСТВЕННЫЙ ОБЪЁМ (ВСЕ КЛЮЧЕВЫЕ БЛОКИ)
 ------------------------------------------------------------------------ */
-
+.maze-area{ padding: 35px;}
 .home-card,
 .option-card,
 .shop-card-grid,
@@ -114,6 +114,7 @@ body {
     transition:
         transform 0.2s ease,
         box-shadow 0.2s ease;
+        padding-bottom: 1%;
 }
 
 /* ===== ЛЕВАЯ ПАНЕЛЬ ===== */
