--- a/style-512.css
+++ b/style-512.css
@@ -29,6 +29,7 @@
         height: auto;
         overflow-y: auto;
         justify-content: flex-start;
+         overflow: hidden;
     }
         
    
@@ -109,13 +110,14 @@
         margin-bottom: 10px;
         align-items: start; 
         display: flex;
-            flex: 1
+            flex: 1;
     }
     
         .shop-card-grid {
             padding: 0px;
             display: flex;
-            flex: 1
+            flex: 1;
+            width: 100%;
         }
 
         .shop-card-grid .shop-card-header h4 {
