--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@
         align-items: center;
         justify-content: center;
         font-size: 18px;
-        color: #ffffff;
+        color: #e8d0b3;
         position: relative;
 
         box-shadow:
@@ -315,7 +315,7 @@
         flex: 1;
         font-size: 14px;
         font-weight: 500;
-        color: #ffffff;
+        color: #e8d0b3;
     }
 
 
@@ -379,11 +379,12 @@
         text-align: center;
         margin-bottom: 20px;
         padding: 0 20px;
+        
     }
 
     .home-title {
         font-size: 36px;
-        color: #ffffff;
+        color: #e8d0b3;
         margin-bottom: 10px;
         font-weight: 700;
         line-height: 1.2;
@@ -397,7 +398,7 @@
         font-weight: 700;
         font-size: 18px;
         margin-bottom: 10px;
-        color: #ffffff;
+        color: #e8d0b3;
         text-align: center;
     }
 
@@ -462,7 +463,7 @@
         font-weight: 700;
         font-size: 18px;
         margin-bottom: 10px;
-        color: #ffffff;
+        color:#e8d0b3;
     }
 
     .option-desc {
@@ -984,6 +985,7 @@
         height: auto;
         position: relative;
         overflow: hidden;
+        align-content: flex-start;
     }
 
     .shop-card-header {
@@ -1001,7 +1003,7 @@
     }
 
     .shop-card-header h4 {
-        color: #ffffff;
+        color: #e8d0b3;
         font-size: 16px;
         margin: 0;
     }
