--- a/style-mobile.css
+++ b/style-mobile.css
@@ -28,8 +28,8 @@
         margin-bottom: 12px;
     }      
             /* Для всех магазинов в сетке на мобильных */
-        .shops-grid .shop-card-grid .shop-card-header h4 {
-            font-size: 10px !important; /* Уменьшаем заголовок магазина */
+        .shops-grid .shop-card-grid h4.shop-card-header {
+            font-size: 12px; /* Уменьшаем заголовок магазина */
             font-weight: 400;
             line-height: 1;
             margin-bottom: 11px;
